--- a/src/html/index/index.html
+++ b/src/html/index/index.html
@@ -1,9 +1,20 @@
-@@include('../components/head.html',{"title":"jusfoun","css":"../../css/less/index.css"})
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="ws">
+    <title>jusfoun</title>
+    <link type="text/css" href="../../css/less/commonn.css" rel="stylesheet">
+    <link type="text/css" href="../../css/less/index.css" rel="stylesheet">
+</head>
 <body>
-	@@include('../components/header.html')
-	<div class='main'>
-			@@include('../components/left-bar.html')
-	</div>
-	@@include('../components/footer.html',{"src":"../../js/index/index.js"})
+<!-- @@include= ../../components/header.html-->
+<div class="main-wrap">
+	<!--@@include= ../../components/left-bar.html-->
+	<div class="right-content">
+		right-content
+	</div>	
+</div>
+	<!--@@include= ../../components/footer.html-->
+	<script src='../../js/index/index.js' ></script>
 </body>
-</html>
