--- a/src/html/index/index.html
+++ b/src/html/index/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="ws">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <title>jusfoun</title>
     <link type="text/css" href="../../css/less/commonn.css" rel="stylesheet">
     <link type="text/css" href="../../css/less/index.css" rel="stylesheet">
